--- a/app/scss/_default/_quotes.scss
+++ b/app/scss/_default/_quotes.scss
@@ -10,9 +10,9 @@
 		border-right: 0 solid transparent;
 	}
 	&:before{
-		left: 10px;
+		left: -25px;
 	}
 	&:after{
-		left: 20px;
+		left: -15px;
 	}
 }
