--- a/app/scss/_default/_responsive.scss
+++ b/app/scss/_default/_responsive.scss
@@ -108,19 +108,6 @@
 		.intro-description{
 			margin-bottom: 60px;
 		}
-	// Quotes general style: "_default/quotes.scss"
-		.quote-p{
-			&:before, &:after{
-				top: 2px;
-				height: 10px;
-			}
-			&:before{
-				left: -35px;
-			}
-			&:after{
-				left: -25px;
-			}
-		}
 
 
 	// Hero section: "_views/hero.scss"
@@ -493,31 +480,16 @@
 		}
 
 		.quote-break{
-			padding-top: 5px;
-
 			.quote-wrapper{
-				width: 50%;
-				max-width: unset;
-				left: 0;
-				@include translate(0,0);
-				float: left;
-				text-align: left;
-
 				.paragraph-box{
 					width: 320px;
-					margin-top: 35px;
-					margin-left: 25px;
-					margin-bottom: 15px;
-					padding: 0;
 				}
 
 				.quote-author{
-					margin-left: 25px;
-					padding: 0;
+					width: 320px;
 
 					&:before{
-						width: 30px;
-						margin-right: 10px;
+						width: 20px;
 						margin-bottom: 4px;
 					}
 				}
@@ -532,11 +504,7 @@
 				top: 0; left: 0;
 				width: 100%;
 				height: 360px;
-				background: rgb(245,247,252); /* Old browsers */
-				background: -moz-linear-gradient(left, rgb(245,247,252) 0%, rgb(255,255,255) 100%); /* FF3.6-15 */
-				background: -webkit-linear-gradient(left, rgb(245,247,252) 0%,rgb(255,255,255) 100%); /* Chrome10-25,Safari5.1-6 */
-				background: linear-gradient(to right, rgb(245,247,252) 0%,rgb(255,255,255) 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
-				filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#f5f7fc', endColorstr='#ffffff',GradientType=1 ); /* IE6-9 */
+				@include grayGradient();
 			}
 
 			.photo-wrapper{
@@ -834,7 +802,7 @@
 				border-bottom-width: 6px;
 			}
 			&:before{
-				left: -38px;
+				left: -28px;
 			}
 		}
 
@@ -1050,24 +1018,19 @@
 		}
 
 		.quote-break {
-			padding-top: 18px;
+			padding: 70px 0;
 
 			.quote-wrapper {
-				margin-top: 15px;
-
 				.paragraph-box{
-					width: 380px;
-					margin-top: 60px;
-					margin-left: 50px;
+					width: 560px;
 					margin-bottom: 30px;
 				}
 
 				.quote-author{
-					margin-left: 50px;
+					width: 560px;
 
 					&:before{
-						width: 40px;
-						margin-right: 15px;
+						width: 25px;
 					}
 				}
 			}
@@ -1280,14 +1243,15 @@
 		.quote-p{
 			&:before, &:after{
 				height: 17px;
+				top: -8px;
 				border-left-width: 14px;
 				border-bottom-width: 8px;
 			}
 			&:before{
-				left: -52px;
+				left: -47px;
 			}
 			&:after{
-				left: -35px;
+				left: -30px;
 			}
 		}
 
@@ -1470,25 +1434,18 @@
 		}
 
 		.quote-break {
-			.quote-wrapper{
-				margin-top: 40px;
+			padding: 110px 0;
 
+			.quote-wrapper{
 				.paragraph-box{
-					width: 550px;
-					margin-top: 80px;
-					margin-left: 80px;
-					box-sizing: content-box;
+					width: 890px;
 				}
 
 				.quote-author{
-					width: auto;
-					margin-left: 80px;
-					margin-right: auto;
-					box-sizing: content-box;
+					width: 890px;
 
 					&:before{
-						width: 50px;
-						margin-right: 25px;
+						margin-bottom: 7px;
 					}
 				}
 			}
